version/0.19/_sources/api/solver/_autosummary/settings/thin_wall.rst.txt
:orphan:

.. _thin_wall:

thin_wall
=========

.. autoclass:: ansys.fluent.core.solver.settings_241.thin_wall.thin_wall
    :show-inheritance:

.. rubric:: Methods

========================================   =======================================

Method                                                                     Summary

========================================   =======================================
:ref:`list_properties <list_properties>`       List properties of selected object.

========================================   =======================================

.. rubric:: Named object type

:ref:`thin_wall_child <thin_wall_child>`


.. rubric:: Included in:

==========================   =======================

Parent                                       Summary

==========================   =======================
:ref:`thermal <thermal_5>`       Help not available.

==========================   =======================

