version/0.24/_sources/api/solver/_autosummary/settings/thin_wall.rst.txt
:orphan:

.. _thin_wall:

thin_wall
=========

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.thin_wall.thin_wall
    :show-inheritance:

.. rubric:: Methods

========================================   ==========================================

Method                                                                        Summary

========================================   ==========================================
:ref:`list_properties <list_properties>`          List properties of selected object.

:ref:`resize <resize>`                         Set number of objects for list-object.

========================================   ==========================================

.. rubric:: Named object type

:ref:`thin_wall_child <thin_wall_child>`


.. rubric:: Included in:

==========================   =================================================

Parent                                                                 Summary

==========================   =================================================
:ref:`thermal <thermal_6>`       Thermal settings for this boundary-condition.

==========================   =================================================

